tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20050826_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/20050826-2.c" (c, x86_64-unknown-linux-gnu)
fn inet_check_attr(%arg0: void*, %arg1: rec_rtattr**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: rec_rtattr**):
        %143 = alloca void*, "r", align 8
        %144 = alloca rec_rtattr**, "rta", align 8
        %145 = alloca s32i, "__retval", align 4
        %146 = alloca s32i, "i", align 4
        store %arg0, %143
        store %arg1, %144
        scope {
            %149 = const 1 : s32i
            store %149, %146, align 4
            for cond: {
                %189 = load %146 : s32i, align 4
                %190 = const 14 : s32i
                %191 = cmp le %189, %190 : bool
                condition %191
            } step: {
                %150 = load %146 : s32i, align 4
                %151 = inc %150 : s32i [nsw]
                store %151, %146, align 4
                yield
            } do {
                scope {
                    %152 = alloca rec_rtattr*, "attr", align 8
                    %153 = load %146 : s32i, align 4
                    %154 = const 1 : s32i
                    %155 = sub %153, %154 : s32i [nsw]
                    %156 = cast(integral) %155 : s64i
                    %157 = load %144 : rec_rtattr**, align 8
                    %158 = ptr_stride %157, %156 : rec_rtattr**
                    %159 = load %158 : rec_rtattr*, align 8
                    store %159, %152, align 8
                    scope {
                        %160 = load %152 : rec_rtattr*, align 8
                        %161 = cast(ptr_to_bool) %160 : bool
                        if %161 {
                            scope {
                                %179 = load %152 : rec_rtattr*, align 8
                                %180 = get_member %179[0] "rta_len" : u16i*
                                %181 = load %180 : u16i, align 2
                                %182 = cast(integral) %181 : u64i
                                %183 = const 4 : u64i
                                %184 = sub %182, %183 : u64i
                                %185 = const 4 : u64i
                                %186 = cmp lt %184, %185 : bool
                                if %186 {
                                    %187 = const -22 : s32i
                                    store %187, %145
                                    %188 = load %145 : s32i
                                    return %188
                                }
                                yield
                            }
                            scope {
                                %162 = load %146 : s32i, align 4
                                %163 = const 9 : s32i
                                %164 = cmp ne %162, %163 : bool
                                %165 = ternary %164 ? { : bool
                                    %176 = load %146 : s32i, align 4
                                    %177 = const 8 : s32i
                                    %178 = cmp ne %176, %177 : bool
                                    yield %178
                                } : {
                                    %175 = const #false : bool
                                    yield %175
                                }
                                if %165 {
                                    %166 = load %152 : rec_rtattr*, align 8
                                    %167 = const 1 : s32i
                                    %168 = ptr_stride %166, %167 : rec_rtattr*
                                    %169 = load %146 : s32i, align 4
                                    %170 = const 1 : s32i
                                    %171 = sub %169, %170 : s32i [nsw]
                                    %172 = cast(integral) %171 : s64i
                                    %173 = load %144 : rec_rtattr**, align 8
                                    %174 = ptr_stride %173, %172 : rec_rtattr**
                                    store %168, %174, align 8
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %147 = const 0 : s32i
        store %147, %145
        %148 = load %145 : s32i
        return %148
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_rtattr[2], "rt", align 2
    %2 = alloca rec_rtattr*[14], "rta", align 16
    %3 = alloca s32i, "i", align 4
    %4 = const 0 : s32i
    store %4, %0
    %5 = const 4 : u64i
    %6 = const 8 : u64i
    %7 = add %5, %6 : u64i
    %8 = cast(integral) %7 : u16i
    %9 = const 0 : s64i
    %10 = get_element %1[%9] : rec_rtattr*
    %11 = get_member %10[0] "rta_len" : u16i*
    store %8, %11, align 2
    %12 = const 0 : u16i
    %13 = const 0 : s64i
    %14 = get_element %1[%13] : rec_rtattr*
    %15 = get_member %14[1] "rta_type" : u16i*
    store %12, %15, align 2
    %16 = const 1 : s64i
    %17 = get_element %1[%16] : rec_rtattr*
    %18 = const 0 : s64i
    %19 = get_element %1[%18] : rec_rtattr*
    copy %17, %19
    scope {
        %132 = const 0 : s32i
        store %132, %3, align 4
        for cond: {
            %140 = load %3 : s32i, align 4
            %141 = const 14 : s32i
            %142 = cmp lt %140, %141 : bool
            condition %142
        } step: {
            %133 = load %3 : s32i, align 4
            %134 = inc %133 : s32i [nsw]
            store %134, %3, align 4
            yield
        } do {
            %135 = const 0 : s64i
            %136 = get_element %1[%135] : rec_rtattr*
            %137 = load %3 : s32i, align 4
            %138 = cast(integral) %137 : s64i
            %139 = get_element %2[%138] : rec_rtattr**
            store %136, %139, align 8
            yield
        }
        yield
    }
    scope {
        %126 = const #cir.ptr<null> : void*
        %127 = cast(array_to_ptrdecay) %2 : rec_rtattr**
        %128 = call @inet_check_attr(%126, %127) : s32i [all]
        %129 = const 0 : s32i
        %130 = cmp ne %128, %129 : bool
        if %130 {
            %131 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %103 = const 0 : s32i
        store %103, %3, align 4
        for cond: {
            %123 = load %3 : s32i, align 4
            %124 = const 14 : s32i
            %125 = cmp lt %123, %124 : bool
            condition %125
        } step: {
            %104 = load %3 : s32i, align 4
            %105 = inc %104 : s32i [nsw]
            store %105, %3, align 4
            yield
        } do {
            scope {
                %106 = load %3 : s32i, align 4
                %107 = cast(integral) %106 : s64i
                %108 = get_element %2[%107] : rec_rtattr**
                %109 = load %108 : rec_rtattr*, align 8
                %110 = load %3 : s32i, align 4
                %111 = const 7 : s32i
                %112 = cmp ne %110, %111 : bool
                %113 = ternary %112 ? { : bool
                    %120 = load %3 : s32i, align 4
                    %121 = const 8 : s32i
                    %122 = cmp ne %120, %121 : bool
                    yield %122
                } : {
                    %119 = const #false : bool
                    yield %119
                }
                %114 = cast(bool_to_int) %113 : s32i
                %115 = cast(integral) %114 : s64i
                %116 = get_element %1[%115] : rec_rtattr*
                %117 = cmp ne %109, %116 : bool
                if %117 {
                    %118 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    scope {
        %92 = const 0 : s32i
        store %92, %3, align 4
        for cond: {
            %100 = load %3 : s32i, align 4
            %101 = const 14 : s32i
            %102 = cmp lt %100, %101 : bool
            condition %102
        } step: {
            %93 = load %3 : s32i, align 4
            %94 = inc %93 : s32i [nsw]
            store %94, %3, align 4
            yield
        } do {
            %95 = const 0 : s64i
            %96 = get_element %1[%95] : rec_rtattr*
            %97 = load %3 : s32i, align 4
            %98 = cast(integral) %97 : s64i
            %99 = get_element %2[%98] : rec_rtattr**
            store %96, %99, align 8
            yield
        }
        yield
    }
    %20 = const #cir.ptr<null> : rec_rtattr*
    %21 = const 1 : s64i
    %22 = get_element %2[%21] : rec_rtattr**
    store %20, %22, align 8
    %23 = const 8 : s32i
    %24 = const 1 : s64i
    %25 = get_element %1[%24] : rec_rtattr*
    %26 = get_member %25[0] "rta_len" : u16i*
    %27 = load %26 : u16i, align 2
    %28 = cast(integral) %27 : s32i
    %29 = sub %28, %23 : s32i [nsw]
    %30 = cast(integral) %29 : u16i
    store %30, %26, align 2
    %31 = const 1 : s64i
    %32 = get_element %1[%31] : rec_rtattr*
    %33 = const 5 : s64i
    %34 = get_element %2[%33] : rec_rtattr**
    store %32, %34, align 8
    scope {
        %86 = const #cir.ptr<null> : void*
        %87 = cast(array_to_ptrdecay) %2 : rec_rtattr**
        %88 = call @inet_check_attr(%86, %87) : s32i [all]
        %89 = const -22 : s32i
        %90 = cmp ne %88, %89 : bool
        if %90 {
            %91 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %37 = const 0 : s32i
        store %37, %3, align 4
        for cond: {
            %83 = load %3 : s32i, align 4
            %84 = const 14 : s32i
            %85 = cmp lt %83, %84 : bool
            condition %85
        } step: {
            %38 = load %3 : s32i, align 4
            %39 = inc %38 : s32i [nsw]
            store %39, %3, align 4
            yield
        } do {
            scope {
                %40 = load %3 : s32i, align 4
                %41 = const 1 : s32i
                %42 = cmp eq %40, %41 : bool
                %43 = ternary %42 ? { : bool
                    %77 = load %3 : s32i, align 4
                    %78 = cast(integral) %77 : s64i
                    %79 = get_element %2[%78] : rec_rtattr**
                    %80 = load %79 : rec_rtattr*, align 8
                    %81 = const #cir.ptr<null> : rec_rtattr*
                    %82 = cmp ne %80, %81 : bool
                    yield %82
                } : {
                    %76 = const #false : bool
                    yield %76
                }
                if %43 {
                    %75 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                } else {
                    scope {
                        %44 = load %3 : s32i, align 4
                        %45 = const 1 : s32i
                        %46 = cmp ne %44, %45 : bool
                        %47 = ternary %46 ? { : bool
                            %72 = load %3 : s32i, align 4
                            %73 = const 5 : s32i
                            %74 = cmp le %72, %73 : bool
                            yield %74
                        } : {
                            %71 = const #false : bool
                            yield %71
                        }
                        %48 = ternary %47 ? { : bool
                            %64 = load %3 : s32i, align 4
                            %65 = cast(integral) %64 : s64i
                            %66 = get_element %2[%65] : rec_rtattr**
                            %67 = load %66 : rec_rtattr*, align 8
                            %68 = const 1 : s64i
                            %69 = get_element %1[%68] : rec_rtattr*
                            %70 = cmp ne %67, %69 : bool
                            yield %70
                        } : {
                            %63 = const #false : bool
                            yield %63
                        }
                        if %48 {
                            %62 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        } else {
                            scope {
                                %49 = load %3 : s32i, align 4
                                %50 = const 5 : s32i
                                %51 = cmp gt %49, %50 : bool
                                %52 = ternary %51 ? { : bool
                                    %55 = load %3 : s32i, align 4
                                    %56 = cast(integral) %55 : s64i
                                    %57 = get_element %2[%56] : rec_rtattr**
                                    %58 = load %57 : rec_rtattr*, align 8
                                    %59 = const 0 : s64i
                                    %60 = get_element %1[%59] : rec_rtattr*
                                    %61 = cmp ne %58, %60 : bool
                                    yield %61
                                } : {
                                    %54 = const #false : bool
                                    yield %54
                                }
                                if %52 {
                                    %53 = get_global @abort : (() -> void)*
                                    call @abort() [all]
                                    yield
                                }
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %35 = const 0 : s32i
    store %35, %0
    %36 = load %0 : s32i
    return %36
}
